--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
+    <script src="http://localhost:5000/theme-selector.js"></script>
   </body>
 </html>
